Fix various spacing and styling issues

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -3,3 +3,5 @@ $transition-duration: 0.5s;
 
 $device-cutoff-medium: 600px;
 $device-cutoff-large: 800px;
+
+$paragraph-spacing: 17px;
