--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -19,10 +19,6 @@
     * {
         height: 20px;
     }
-
-    svg {
-        margin-right: 10px;
-    }
 }
 
 .collapsible {
